# halifax-bus-otp-tracker

./: .gitignore  Makefile  main.py  pyproject.toml
dashboard/: app.py
dashboard/lib/: db.py  queries.py
dashboard/pages/: 1_Route_Overview.py  2_Hourly_Patterns.py  3_Delay_Distribution.py  4_Stop_Map.py  5_System_Health.py
docker/: Dockerfile  docker-compose.yml
scripts/: load_static_gtfs.py  run_aggregation.py  setup_db.py
src/: config.py  models.py
src/aggregation/: __init__.py  daily_summary.py
src/db/: __init__.py  connection.py  queries.py  schema.py
src/gtfs/: __init__.py  realtime_poller.py  static_loader.py
src/processing/: __init__.py  trip_updates.py
tests/: __init__.py
