[project]
name = "bus-realtime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gtfs-realtime-bindings>=2.0.0",
    "requests>=2.32.5",
    "duckdb>=1.0.0",
    "pydantic>=2.0.0",
    "schedule>=1.2.0",
    "python-dotenv>=1.0.0",
]
